--- a/amazonlinux-python3.7/.devcontainer/Dockerfile
+++ b/amazonlinux-python3.7/.devcontainer/Dockerfile
@@ -41,3 +41,5 @@ RUN cd /usr/local/bin && \
     ln -s pip3 pip 
     
 RUN pip3 install pipenv 
+
+RUN echo "\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ " >> ~/.bashrc
