whoops... this time with correct bashrc

--- a/amazonlinux-python3.7/.devcontainer/Dockerfile
+++ b/amazonlinux-python3.7/.devcontainer/Dockerfile
@@ -42,4 +42,4 @@ RUN cd /usr/local/bin && \
     
 RUN pip3 install pipenv 
 
-RUN echo "\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ " >> ~/.bashrc
+RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc
