--- a/amazonlinux-docker/.devcontainer/Dockerfile.build
+++ b/amazonlinux-docker/.devcontainer/Dockerfile.build
@@ -5,7 +5,7 @@
 #-------------------------------------------------------------------------------------------------------------
 
 # Note: You can use any Debian/Ubuntu based image you want. 
-FROM smankoo/devcon-amazonlinux-docker
+FROM amazonlinux
 
 # This Dockerfile adds a non-root user with sudo access. Use the "remoteUser"
 # property in devcontainer.json to use it. On Linux, the container user's GID/UIDs
