--- a/amazonlinux-docker/.devcontainer/Dockerfile.build
+++ b/amazonlinux-docker/.devcontainer/Dockerfile.build
@@ -50,6 +50,7 @@ RUN yum -y update \
         && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
         && chmod 0440 /etc/sudoers.d/$USERNAME; \
     fi \
+    echo "export PS1=\"\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc \
     #
     # Use Docker script from script library to set things up
     # && curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
