--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -1,5 +1,5 @@
 # Note: You can use any Debian/Ubuntu based image you want. 
-FROM amazonlinux
+FROM smankoo/devcon-amazonlinux:latest
 
 # This Dockerfile adds a non-root user with sudo access. Use the "remoteUser"
 # property in devcontainer.json to use it. On Linux, the container user's GID/UIDs
@@ -15,39 +15,15 @@ ARG TARGET_SOCKET=/var/run/docker.sock
 
 ARG DOCKER_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/docker-redhat.sh"
 ARG GIT_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/makegit-redhat.sh"
-ARG python37_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/python3.7-redhat.sh"
 ARG terraform_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/terraform.sh"
 
-RUN yum -y update \
-    && export DEBIAN_FRONTEND=noninteractive \
-    # Verify common dependencies and utilities are installed
-    && yum -y install deltarpm \
-    && yum -y install net-tools dialog git openssh-clients curl less  procps 2>&1 \
-    #
-    # Create a non-root user to use if not already available - see https://aka.ms/vscode-remote/containers/non-root-user.
-    && if [ $(getent passwd $USERNAME) ]; then \
-        # If exists, see if we need to tweak the GID/UID
-        if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
-            groupmod --gid $USER_GID $USERNAME \
-            && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
-            && chown -R $USER_UID:$USER_GID /home/$USERNAME; \
-        fi; \
-    else \
-        # Otherwise ccreate the non-root user
-        groupadd --gid $USER_GID $USERNAME \
-        && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
-        # Add sudo support for the non-root user
-        && yum -y install sudo \
-        && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
-        && chmod 0440 /etc/sudoers.d/$USERNAME; \
-    fi \
-    #
-    && curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
+RUN curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
     && curl -sSL $GIT_SCRIPT_SOURCE -o /tmp/git-setup.sh \
-    && curl -sSL $python37_SCRIPT_SOURCE -o /tmp/python37-setup.sh \
     && curl -sSL $terraform_SCRIPT_SOURCE -o /tmp/terraform-setup.sh \
+    && chmod 755 /tmp/*.sh \
     && /bin/bash /tmp/docker-setup.sh "${ENABLE_NONROOT_DOCKER}" "${SOURCE_SOCKET}" "${TARGET_SOCKET}" "${USERNAME}" \
-    && /bin/bash /tmp/makegit-redhat.sh \
+    && /bin/bash /tmp/git-setup.sh \
+    && /bin/bash /tmp/terraform-setup.sh \
     && rm /tmp/* \
     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc \
     #
