--- a/amazonlinux/.devcontainer/devcontainer.json
+++ b/amazonlinux/.devcontainer/devcontainer.json
@@ -1,13 +1,9 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.128.0/containers/ubuntu
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.128.0/containers/docker-from-docker
 {
-	"name": "AmazonLinux",
-	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick an Ubuntu version. Rebuild the container if it already
-		// exists to update. Available variants: focal (or ubuntu-20.04), bionic (or ubuntu-18.04)
-		// "args": { "VARIANT": "focal" }
-	},
+	"name": "AmazonLinux Kitchensink",
+	"dockerFile": "Dockerfile",
+	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
@@ -15,20 +11,20 @@
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": []
-
+	"extensions": [
+		"ms-azuretools.vscode-docker"
+	],
+	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
-
-	// Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker.
-	// "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
+	// "postCreateCommand": "docker --version",
 
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 
-	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	// Uncomment the next two lines to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
+	"overrideCommand": false,
+	"remoteUser": "vscode"
 }
