removed container for python3.7

--- a/amazonlinux/.devcontainer/devcontainer.json
+++ b/amazonlinux/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.128.0/containers/docker-from-docker
 {
 	"name": "AmazonLinux Kitchensink",
-	"dockerFile": "Dockerfile",
+	"image": "smankoo/devcon-amazonlinux:kitchensink",
 	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
 
 	// Set *default* container specific settings.json values on container create.
