--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -16,6 +16,7 @@ ARG TARGET_SOCKET=/var/run/docker.sock
 ARG DOCKER_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/docker-redhat.sh"
 ARG GIT_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/makegit-redhat.sh"
 ARG terraform_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/terraform.sh"
+ARG HOMEBREW_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/homebrew.sh"
 
 
 RUN yum -y update \
@@ -59,7 +60,8 @@ RUN curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
     && yum -y clean all \
     && rm -rf /var/cache/yum 
     
-
+RUN curl -sSL $HOMEBREW_SCRIPT_SOURCE -o /tmp/homebrew-setup.sh && \
+    su -c '/tmp/homebrew-setup.sh' - ${USERNAME}
 # Setting the ENTRYPOINT to docker-init.sh will configure non-root access to 
 # the Docker socket if "overrideCommand": false is set in devcontainer.json. 
 # The script will also execute CMD if you need to alter startup behaviors.
