--- a/amazonlinux/.devcontainer/Dockerfile.1.latest
+++ b/amazonlinux/.devcontainer/Dockerfile.1.latest
@@ -36,4 +36,5 @@ RUN if [ $(getent passwd $USERNAME) ]; then \
         && chmod 0440 /etc/sudoers.d/$USERNAME; \
     fi \
     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc \
-    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
+    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc \
+    && chown ${USERNAME}:${USERNAME} /workspaces -R
