updated to new config

--- a/amazonlinux/.devcontainer/Dockerfile.1.latest
+++ b/amazonlinux/.devcontainer/Dockerfile.1.latest
@@ -13,28 +13,18 @@ ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-RUN yum -y update \
-    # Verify common dependencies and utilities are installed
-    && yum -y install deltarpm \
-    && yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip python3 python3-venv python3-pip which awscli 2>&1
+ARG COMMON_SCRIPT_SOURCE="https://raw.githubusercontent.com/microsoft/vscode-dev-containers/master/script-library/common-redhat.sh"
 
-RUN pip3 install pipenv 
-    # Create a non-root user to use if not already available - see https://aka.ms/vscode-remote/containers/non-root-user.
-RUN if [ $(getent passwd $USERNAME) ]; then \
-        # If exists, see if we need to tweak the GID/UID
-        if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
-            groupmod --gid $USER_GID $USERNAME \
-            && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
-            && chown -R $USER_UID:$USER_GID /home/$USERNAME; \
-        fi; \
-    else \
-        # Otherwise ccreate the non-root user
-        groupadd --gid $USER_GID $USERNAME \
-        && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
-        # Add sudo support for the non-root user
-        && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
-        && chmod 0440 /etc/sudoers.d/$USERNAME; \
-    fi \
-    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc \
-    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc \
-    && chown ${USERNAME}:${USERNAME} /workspaces -R
+RUN curl -sSL $COMMON_SCRIPT_SOURCE -o /tmp/common-redhat.sh && \
+    chmod 755 /tmp/common-redhat.sh && \
+    /tmp/common-redhat.sh true ${USERNAME} ${USER_UID} ${USER_GID}
+
+# Verify common dependencies and utilities are installed
+RUN yum -y update \
+    && yum -y install deltarpm \
+    && yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip python3 python3-pip which awscli 2>&1
+
+RUN pip3 install pipenv bs4 requests keyring keryings.alt boto3
+
+RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc && \
+    echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
