--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -59,14 +59,14 @@ RUN curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
     && yum -y autoremove \
     && yum -y clean all \
     && rm -rf /var/cache/yum 
-    
+
 RUN curl -sSL $HOMEBREW_SCRIPT_SOURCE -o /tmp/homebrew-setup.sh && \
-    chmod 755 /tmp/homebrew-setup.sh \
-    su -c '/tmp/homebrew-setup.sh' - ${USERNAME}
+    chmod 755 /tmp/homebrew-setup.sh && \
+    su - ${USERNAME} -c '/tmp/homebrew-setup.sh'
 # Setting the ENTRYPOINT to docker-init.sh will configure non-root access to 
 # the Docker socket if "overrideCommand": false is set in devcontainer.json. 
 # The script will also execute CMD if you need to alter startup behaviors.
 
 RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc
-ENTRYPOINT [ "/usr/local/share/docker-init.sh" ]
+# ENTRYPOINT [ "/usr/local/share/docker-init.sh" ]
 CMD [ "sleep", "infinity" ]
