--- a/amazonlinux/.devcontainer/devcontainer.json
+++ b/amazonlinux/.devcontainer/devcontainer.json
@@ -12,7 +12,10 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"ms-azuretools.vscode-docker"
+		"ms-azuretools.vscode-docker",
+		"esbenp.prettier-vscode",
+		"hashicorp.terraform",
+		"ms-python.python"
 	],
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
