--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -26,23 +26,23 @@ RUN yum -y update \
 
 RUN pip3 install pipenv 
     # Create a non-root user to use if not already available - see https://aka.ms/vscode-remote/containers/non-root-user.
-RUN if [ $(getent passwd $USERNAME) ]; then \
-        # If exists, see if we need to tweak the GID/UID
-        if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
-            groupmod --gid $USER_GID $USERNAME \
-            && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
-            && chown -R $USER_UID:$USER_GID /home/$USERNAME; \
-        fi; \
-    else \
-        # Otherwise ccreate the non-root user
-        groupadd --gid $USER_GID $USERNAME \
-        && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
-        # Add sudo support for the non-root user
-        && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
-        && chmod 0440 /etc/sudoers.d/$USERNAME; \
-    fi \
-    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc \
-    && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
+# RUN if [ $(getent passwd $USERNAME) ]; then \
+#         # If exists, see if we need to tweak the GID/UID
+#         if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
+#             groupmod --gid $USER_GID $USERNAME \
+#             && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
+#             && chown -R $USER_UID:$USER_GID /home/$USERNAME; \
+#         fi; \
+#     else \
+#         # Otherwise ccreate the non-root user
+#         groupadd --gid $USER_GID $USERNAME \
+#         && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
+#         # Add sudo support for the non-root user
+#         && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
+#         && chmod 0440 /etc/sudoers.d/$USERNAME; \
+#     fi \
+#     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc \
+#     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
 
 RUN curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh \
     && curl -sSL $GIT_SCRIPT_SOURCE -o /tmp/git-setup.sh \
