--- a/amazonlinux/.devcontainer/Dockerfile.1.latest
+++ b/amazonlinux/.devcontainer/Dockerfile.1.latest
@@ -26,5 +26,6 @@ RUN yum -y update \
 
 RUN pip3 install pipenv bs4 requests keyring keryings.alt boto3
 
+# Set prompt (copied from Windows WSL Ubuntu)
 RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc && \
     echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
