--- a/amazonlinux/.devcontainer/Dockerfile.1.latest
+++ b/amazonlinux/.devcontainer/Dockerfile.1.latest
@@ -20,11 +20,10 @@ RUN curl -sSL $COMMON_SCRIPT_SOURCE -o /tmp/common-redhat.sh && \
     /tmp/common-redhat.sh true ${USERNAME} ${USER_UID} ${USER_GID}
 
 # Verify common dependencies and utilities are installed
-RUN yum -y update \
-    && yum -y install deltarpm \
-    && yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip python3 python3-pip which awscli 2>&1
-
-RUN pip3 install pipenv bs4 requests keyring keyrings.alt boto3
+RUN yum -y update && \
+    yum -y install deltarpm && \
+    yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip mlocate python3 python3-pip which awscli && \
+    updatedb 2>&1
 
 # Set prompt (copied from Windows WSL Ubuntu)
 RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc && \
