--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -52,9 +52,12 @@ RUN curl -sSL $TERRAFORM_SCRIPT_SOURCE -o /tmp/terraform-setup.sh && \
     chmod 755 /tmp/terraform-setup.sh && \
     /bin/bash /tmp/terraform-setup.sh
 
+# Install Homebrew and AWS SAM CLI
 RUN curl -sSL $HOMEBREW_SCRIPT_SOURCE -o /tmp/homebrew-setup.sh && \
     chmod 755 /tmp/homebrew-setup.sh && \
-    su - ${USERNAME} -c '/tmp/homebrew-setup.sh'
+    su - ${USERNAME} -c '/tmp/homebrew-setup.sh' && \
+    su - ${USERNAME} -c 'brew tap aws/tap' && \
+    su - ${USERNAME} -c 'brew install aws-sam-cli'
 
 # install commonly used python modules
 RUN su - ${USERNAME} -c 'pip3 install --user wheel pipenv bs4 requests keyring keyrings.alt boto3'
