--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -19,31 +19,6 @@ ARG TERRAFORM_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/m
 ARG HOMEBREW_SCRIPT_SOURCE="https://raw.githubusercontent.com/smankoo/devcons/master/script-library/homebrew.sh"
 
 
-# RUN yum -y update \
-#     # Verify common dependencies and utilities are installed
-#     && yum -y install deltarpm \
-#     && yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip python3 python3-venv python3-pip awscli 2>&1
-
-# RUN pip3 install pipenv 
-    # Create a non-root user to use if not already available - see https://aka.ms/vscode-remote/containers/non-root-user.
-# RUN if [ $(getent passwd $USERNAME) ]; then \
-#         # If exists, see if we need to tweak the GID/UID
-#         if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
-#             groupmod --gid $USER_GID $USERNAME \
-#             && usermod --uid $USER_UID --gid $USER_GID $USERNAME \
-#             && chown -R $USER_UID:$USER_GID /home/$USERNAME; \
-#         fi; \
-#     else \
-#         # Otherwise ccreate the non-root user
-#         groupadd --gid $USER_GID $USERNAME \
-#         && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
-#         # Add sudo support for the non-root user
-#         && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
-#         && chmod 0440 /etc/sudoers.d/$USERNAME; \
-#     fi \
-#     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc \
-#     && echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> /home/${USERNAME}/.bashrc
-
 RUN curl -sSL $DOCKER_SCRIPT_SOURCE -o /tmp/docker-setup.sh && \
     chmod 755 /tmp/docker-setup.sh && \
     /bin/bash /tmp/docker-setup.sh "${ENABLE_NONROOT_DOCKER}" "${SOURCE_SOCKET}" "${TARGET_SOCKET}" "${USERNAME}"
@@ -52,18 +27,11 @@ RUN curl -sSL $TERRAFORM_SCRIPT_SOURCE -o /tmp/terraform-setup.sh && \
     chmod 755 /tmp/terraform-setup.sh && \
     /bin/bash /tmp/terraform-setup.sh
 
-# Install Homebrew
-RUN curl -sSL $HOMEBREW_SCRIPT_SOURCE -o /tmp/homebrew-setup.sh && \
-    chmod 755 /tmp/homebrew-setup.sh && \
-    su - ${USERNAME} -c '/tmp/homebrew-setup.sh'
-
 # Install AWS SAM CLI
-RUN yum -y install perl-devel && \
-    su - ${USERNAME} -c 'brew tap aws/tap' && \
-    su - ${USERNAME} -c 'brew install aws-sam-cli'
+RUN su - ${USERNAME} -c 'pip3 install --user --upgrade awscli aws-sam-cli'
 
 # install commonly used python modules
-RUN su - ${USERNAME} -c 'pip3 install --user wheel pipenv bs4 requests keyring keyrings.alt boto3'
+RUN su - ${USERNAME} -c 'pip3 install --user --upgrade wheel pipenv bs4 requests keyring keyrings.alt boto3'
 
 # Clean up
 RUN rm /tmp/* \
