--- a/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
+++ b/amazonlinux/.devcontainer/Dockerfile.2.kitchensink
@@ -28,9 +28,11 @@ RUN curl -sSL $TERRAFORM_SCRIPT_SOURCE -o /tmp/terraform-setup.sh && \
 # Install AWS SAM CLI
 RUN su - ${USERNAME} -c 'pip3 install --user --upgrade awscli aws-sam-cli'
 
-# install commonly used python modules
+# Install commonly used python modules
 RUN su - ${USERNAME} -c 'pip3 install --user --upgrade wheel pipenv bs4 requests keyring keyrings.alt boto3 pylint autopep8'
 
+# Install serverless
+RUN su - ${USERNAME} -c 'curl -o- -L https://slss.io/install | bash'
 
 # Clean up
 RUN rm /tmp/* \
