cloud formation and yaml linting

--- a/amazonlinux/.devcontainer/devcontainer.json
+++ b/amazonlinux/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 		"hashicorp.terraform",
 		"ms-python.python",
 		"shakram02.bash-beautify",
-		"threadheap.serverless-ide-vscode"
+		"threadheap.serverless-ide-vscode",
+		"redhat.vscode-yaml"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
