--- a/amazonlinux/.devcontainer/Dockerfile.1.latest
+++ b/amazonlinux/.devcontainer/Dockerfile.1.latest
@@ -14,11 +14,12 @@ RUN curl -sSL $COMMON_SCRIPT_SOURCE -o /tmp/common-redhat.sh && \
 RUN yum -y update && \
     yum -y install deltarpm && \
     yum -y install net-tools dialog git openssh-clients curl less procps tar sudo wget unzip zip mlocate python3 python3-pip which hostname man && \
-    updatedb 2>&1
+    updatedb ntpdate 2>&1
 
 # Set Timezone
 ENV TZ=America/Toronto
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN ntpdate -sb time.nist.gov
 
 # Set prompt (copied from Windows WSL Ubuntu)
 RUN echo "export PS1=\"\[\e]0;\u@\h: \w\a\]\${debian_chroot:+(\$debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ \"" >> ~/.bashrc && \
